--- a/ProjetoMavenJSFPrimeFaces/src/main/resources/application_pt.properties
+++ b/ProjetoMavenJSFPrimeFaces/src/main/resources/application_pt.properties
@@ -22,6 +22,7 @@ pages.cadastroAluno.matricula				= Matr\u00edcula
 pages.cadastroAluno.nome					= Nome
 pages.cadastroAluno.curso					= Curso
 pages.cadastroAluno.btnSalvar				= Salvar
+pages.cadastroAluno.optionTable				= Deletar/ Atualizar
 
 pages.cadastroProfessor.title				= Gerencial->Cadastro Professor
 pages.cadastroProfessor.menu				= Cadastro Professor
@@ -29,6 +30,7 @@ pages.cadastroProfessor.matricula			= Matr\u00edcula
 pages.cadastroProfessor.nome				= Nome
 pages.cadastroProfessor.curso				= Curso
 pages.cadastroProfessor.btnSalvar			= Salvar
+pages.cadastroProfessor.optionTable   		= Deletar/ Atualizar
 
 pages.tela2.hello							= Ol\u00e1 da tela2
 pages.tela2.title							= Gerencial->Tela2
