--- a/ProjetoMavenJSFPrimeFaces/src/main/resources/application_en.properties
+++ b/ProjetoMavenJSFPrimeFaces/src/main/resources/application_en.properties
@@ -22,6 +22,15 @@ pages.cadastroAluno.matricula				= Id
 pages.cadastroAluno.nome					= Name
 pages.cadastroAluno.curso					= Course
 pages.cadastroAluno.btnSalvar				= Save
+pages.cadastroAluno.optionTable				= Delete/ Update
+
+pages.cadastroProfessor.title				= Manager->Register Teacher
+pages.cadastroProfessor.menu				= Register Teacher
+pages.cadastroProfessor.matricula			= Id
+pages.cadastroProfessor.nome				= Name
+pages.cadastroProfessor.curso				= Course
+pages.cadastroProfessor.btnSalvar			= Save
+pages.cadastroProfessor.optionTable   		= Delete/ Update
 
 pages.tela2.hello							= Hello from tela2
 pages.tela2.title							= Manager->Tela2
